--- a/index.html
+++ b/index.html
@@ -1,75 +1,310 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Video Mockup Fullscreen</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>SNBT Mockup – Full Cascade</title>
+
 <style>
-  /* Reset default margin/padding */
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    background-color: #000; /* Optional: hitam supaya kontras */
-  }
+body{
+  margin:0;
+  height:100vh;
+  background:#020617;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-family:system-ui,-apple-system,Segoe UI;
+  overflow:hidden;
+}
 
-  /* Container untuk video / animasi mockup */
-  .mockup {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+/* ===== PHONE ===== */
+.phone{
+  width:230px;
+  height:460px;
+  position:relative;
+  transform-style:preserve-3d;
+  animation:floatPhone 8s ease-in-out infinite;
+}
+@keyframes floatPhone{
+  0%,100%{transform:translateY(0) rotateX(3deg) rotateY(-3deg)}
+  50%{transform:translateY(-6px) rotateX(5deg) rotateY(-5deg)}
+}
 
-  /* Video atau elemen konten utama */
-  video, .content {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* fill screen tanpa merusak aspect ratio */
-  }
+/* ===== BODY ===== */
+.body{
+  position:absolute;
+  inset:0;
+  border-radius:34px;
+  background:#020617;
+  box-shadow:
+    0 60px 120px rgba(0,0,0,.8),
+    inset 0 0 0 1.5px #334155;
+}
+.body::before{
+  content:"";
+  position:absolute;
+  inset:-2px;
+  border-radius:36px;
+  background:linear-gradient(180deg, transparent 0%, rgba(56,189,248,.45) 50%, transparent 100%);
+  opacity:.35;
+  animation:rimMove 6s ease-in-out infinite;
+}
+@keyframes rimMove{
+  0%,100%{transform:translateY(-18px)}
+  50%{transform:translateY(18px)}
+}
 
-  /* Contoh overlay teks / CTA */
-  .overlay-text {
-    position: absolute;
-    bottom: 10%;
-    width: 100%;
-    text-align: center;
-    font-size: 48px;
-    color: white;
-    font-family: Arial, sans-serif;
-    text-shadow: 0 0 10px rgba(0,0,0,0.7);
-  }
+/* ===== SCREEN ===== */
+.screen{
+  position:absolute;
+  inset:10px;
+  border-radius:26px;
+  overflow:hidden;
+}
+
+/* ===== BRAND ===== */
+.branding{
+  position:absolute;
+  top:6px;
+  right:6px;
+  font-size:10px;
+  font-weight:700;
+  color:#fff;
+  opacity:.85;
+  z-index:50;
+  background:rgba(0,0,0,0.25);
+  padding:2px 4px;
+  border-radius:3px;
+}
+
+/* ===== HOOK ===== */
+.hook-svg{
+  position:absolute;
+  top:22px;
+  width:100%;
+  height:48px;
+  z-index:40;
+}
+.hook-text{
+  font-size:13px;
+  fill:#38bdf8;
+  font-weight:700;
+  letter-spacing:1.2px;
+}
+
+/* ===== SUBTITLE ===== */
+.hook-subtitle{
+  position:absolute;
+  top:64px;
+  width:100%;
+  text-align:center;
+  color:#e5e7eb;
+  font-size:.8em;
+  font-weight:600;
+  opacity:.9;
+}
+
+/* ===== RATIONALE ===== */
+.rationale{
+  position:absolute;
+  top:104px;
+  width:90%;
+  left:5%;
+  opacity:0;
+  transform:translateY(14px) scale(.92);
+  transition:all .8s cubic-bezier(.22,.9,.22,1);
+  z-index:30;
+}
+.rationale.show{
+  opacity:1;
+  transform:translateY(0) scale(1);
+  animation:floatRationale 6s ease-in-out infinite;
+}
+.rationale img{
+  width:100%;
+  height:auto;
+  object-fit:contain;
+}
+@keyframes floatRationale{
+  0%,100%{transform:translateY(0) scale(1)}
+  50%{transform:translateY(-6px) scale(1)}
+}
+
+/* ===== CASCADE ===== */
+.cascade-container{
+  position:absolute;
+  top:180px;
+  width:100%;
+  height:240px;
+  pointer-events:none;
+  z-index:20;
+}
+.cascade-container img{
+  position:absolute;
+  width:80%;
+  left:10%;
+  opacity:0;
+  transform:translateY(40px) scale(.94);
+  transition:all .7s cubic-bezier(.22,.9,.22,1);
+}
+
+/* ===== QUIZ ===== */
+.quiz-text{
+  position:absolute;
+  bottom:14px;
+  width:90%;
+  left:5%;
+  color:#fff;
+  font-weight:700;
+  text-align:center;
+  opacity:0;
+  transition:opacity .6s ease;
+  z-index:40;
+}
+.quiz-text.show{opacity:1}
+
+/* ===== WORD FLY ===== */
+.word-fly-container{
+  position:absolute;
+  inset:0;
+  pointer-events:none;
+  z-index:60;
+}
+.word-fly{
+  position:absolute;
+  font-weight:700;
+  color:#fff;
+  transition:
+    transform 1.2s cubic-bezier(.22,.9,.22,1),
+    opacity 1s ease;
+}
+.word-fly.out{opacity:0}
 </style>
 </head>
+
 <body>
+<div class="phone">
+  <div class="body"></div>
+  <div class="screen">
 
-<div class="mockup">
-  <!-- Contoh video, bisa diganti dengan elemen animasi JS -->
-  <video autoplay muted loop playsinline>
-    <source src="video.mp4" type="video/mp4">
-    Browser tidak mendukung video.
-  </video>
+    <div class="branding">ETK Yogya</div>
 
-  <!-- Overlay teks / CTA -->
-  <div class="overlay-text">Belajar lebih mudah dengan CBTLearning!</div>
+    <!-- Curved Hook -->
+    <svg class="hook-svg" viewBox="0 0 230 50">
+      <defs>
+        <path id="arc" d="M12,40 A110,32 0 0,1 218,40"/>
+      </defs>
+      <text class="hook-text">
+        <textPath href="#arc" startOffset="50%" text-anchor="middle">
+          ...CBTLearning|Paham|SNBT'26...
+        </textPath>
+      </text>
+    </svg>
+
+    <div class="hook-subtitle">•Rationale Generator•</div>
+
+    <div class="rationale" id="rationale">
+      <img id="image">
+    </div>
+
+    <div class="cascade-container" id="cascade"></div>
+
+    <div class="quiz-text" id="quizText"
+      data-text="•SNBT•BAHAS|TUNTAS| Jika 3x + 5 = 20, maka nilai x adalah">
+    </div>
+
+    <div class="word-fly-container" id="fly"></div>
+  </div>
 </div>
 
-<!-- Optional: animasi JS -->
 <script>
-  // Contoh animasi sederhana: teks bergoyang
-  const overlay = document.querySelector('.overlay-text');
-  let angle = 0;
-  function animate() {
-    angle += 0.5;
-    overlay.style.transform = `translateY(${Math.sin(angle * Math.PI / 180) * 10}px)`;
-    requestAnimationFrame(animate);
-  }
-  animate();
-</script>
+const images=[
+ "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg",
+ "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz2.jpg",
+ "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz3.jpg",
+ "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz5.jpg",
+ "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz6.jpg"
+];
 
+const rationale=document.getElementById("rationale");
+const image=document.getElementById("image");
+const quiz=document.getElementById("quizText");
+const cascade=document.getElementById("cascade");
+const fly=document.getElementById("fly");
+
+let idx=0;
+const DURATION=5200;
+
+/* preload */
+images.forEach(s=>{const i=new Image();i.src=s});
+
+/* split words */
+function split(){
+  quiz.innerHTML=quiz.dataset.text.split(" ")
+    .map(w=>`<span>${w}</span>`).join(" ");
+}
+
+/* fly words */
+function flyWords(){
+  fly.innerHTML="";
+  const p=fly.getBoundingClientRect();
+  quiz.querySelectorAll("span").forEach((s,i)=>{
+    const r=s.getBoundingClientRect();
+    const c=s.cloneNode(true);
+    c.className="word-fly";
+    c.style.left=r.left-p.left+"px";
+    c.style.top=r.top-p.top+"px";
+    fly.appendChild(c);
+    setTimeout(()=>{
+      const a=Math.random()*Math.PI*2;
+      c.style.transform=`translate(${Math.cos(a)*80}px,${Math.sin(a)*80}px) scale(1.8)`;
+      c.classList.add("out");
+    },i*120);
+    setTimeout(()=>c.remove(),1600);
+  });
+}
+
+/* cascade */
+function showCascade(){
+  cascade.innerHTML="";
+  images.forEach((src,i)=>{
+    const img=document.createElement("img");
+    img.src=src;
+    img.style.zIndex=10+i;
+    cascade.appendChild(img);
+    setTimeout(()=>{
+      img.style.opacity=1;
+      img.style.transform=`translateY(${i*14}px) scale(1)`;
+    },i*260);
+    setTimeout(()=>img.remove(),DURATION);
+  });
+}
+
+/* main loop */
+function show(){
+  image.src=images[idx%images.length];
+  idx++;
+  rationale.classList.remove("show");
+  quiz.classList.remove("show");
+  quiz.innerHTML=quiz.dataset.text;
+
+  image.onload=()=>{
+    setTimeout(()=>rationale.classList.add("show"),200);
+    setTimeout(()=>{
+      quiz.classList.add("show");
+      split();
+      flyWords();
+    },900);
+    setTimeout(()=>{
+      rationale.classList.remove("show");
+      quiz.classList.remove("show");
+      showCascade();
+    },DURATION-1000);
+  };
+
+  setTimeout(show,DURATION+1400);
+}
+show();
+</script>
 </body>
 </html>
