--- a/index.html
+++ b/index.html
@@ -3,58 +3,69 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>SNBT Mockup – Full Cascade</title>
+<title>CBTLearning – Algorithm Ready</title>
 
 <style>
+/* ===== RESET ===== */
 body{
   margin:0;
-  height:100vh;
   background:#020617;
-  display:flex;
-  justify-content:center;
-  align-items:center;
   font-family:system-ui,-apple-system,Segoe UI;
   overflow:hidden;
+  color:white;
 }
+
+/* ===== PRE-HOOK ===== */
+.prehook{
+  position:fixed;
+  inset:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:999;
+  background:#020617;
+  animation:prehookZoom 1.1s ease forwards;
+}
+.prehook h1{
+  text-align:center;
+  font-size:2.2rem;
+  line-height:1.2;
+  letter-spacing:.6px;
+}
+@keyframes prehookZoom{
+  from{transform:scale(1);opacity:1}
+  to{transform:scale(1.08);opacity:0}
+}
+
+/* ===== MAIN ===== */
+.main{
+  opacity:0;
+  animation:showMain .1s linear forwards;
+  animation-delay:1.1s;
+}
+@keyframes showMain{to{opacity:1}}
 
 /* ===== PHONE ===== */
 .phone{
   width:230px;
   height:460px;
   position:relative;
-  transform-style:preserve-3d;
-  animation:floatPhone 8s ease-in-out infinite;
+  margin:auto;
+  margin-top:6vh;
+  animation:float 6s ease-in-out infinite;
 }
-@keyframes floatPhone{
-  0%,100%{transform:translateY(0) rotateX(3deg) rotateY(-3deg)}
-  50%{transform:translateY(-6px) rotateX(5deg) rotateY(-5deg)}
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-6px)}
 }
-
-/* ===== BODY ===== */
 .body{
   position:absolute;
   inset:0;
   border-radius:34px;
   background:#020617;
-  box-shadow:
-    0 60px 120px rgba(0,0,0,.8),
-    inset 0 0 0 1.5px #334155;
+  box-shadow:0 50px 120px rgba(0,0,0,.8),
+             inset 0 0 0 1.5px #334155;
 }
-.body::before{
-  content:"";
-  position:absolute;
-  inset:-2px;
-  border-radius:36px;
-  background:linear-gradient(180deg, transparent 0%, rgba(56,189,248,.45) 50%, transparent 100%);
-  opacity:.35;
-  animation:rimMove 6s ease-in-out infinite;
-}
-@keyframes rimMove{
-  0%,100%{transform:translateY(-18px)}
-  50%{transform:translateY(18px)}
-}
-
-/* ===== SCREEN ===== */
 .screen{
   position:absolute;
   inset:10px;
@@ -62,249 +73,103 @@ body{
   overflow:hidden;
 }
 
-/* ===== BRAND ===== */
+/* ===== BRANDING (DITUNDA) ===== */
 .branding{
   position:absolute;
   top:6px;
   right:6px;
   font-size:10px;
   font-weight:700;
-  color:#fff;
-  opacity:.85;
-  z-index:50;
-  background:rgba(0,0,0,0.25);
-  padding:2px 4px;
-  border-radius:3px;
+  opacity:0;
+  animation:showBrand .3s ease forwards;
+  animation-delay:2.2s;
 }
+@keyframes showBrand{to{opacity:.85}}
 
 /* ===== HOOK ===== */
-.hook-svg{
+.hook{
   position:absolute;
-  top:22px;
-  width:100%;
-  height:48px;
-  z-index:40;
-}
-.hook-text{
-  font-size:13px;
-  fill:#38bdf8;
-  font-weight:700;
-  letter-spacing:1.2px;
-}
-
-/* ===== SUBTITLE ===== */
-.hook-subtitle{
-  position:absolute;
-  top:64px;
+  top:24px;
   width:100%;
   text-align:center;
-  color:#e5e7eb;
-  font-size:.8em;
-  font-weight:600;
-  opacity:.9;
+  font-size:14px;
+  font-weight:800;
+  letter-spacing:1px;
+  opacity:0;
+  animation:hookIn .3s ease forwards;
+  animation-delay:1.2s;
+}
+@keyframes hookIn{
+  from{transform:scale(.96);opacity:0}
+  to{transform:scale(1);opacity:1}
 }
 
 /* ===== RATIONALE ===== */
 .rationale{
   position:absolute;
-  top:104px;
+  top:80px;
   width:90%;
   left:5%;
   opacity:0;
   transform:translateY(14px) scale(.92);
-  transition:all .8s cubic-bezier(.22,.9,.22,1);
-  z-index:30;
+  transition:.7s cubic-bezier(.22,.9,.22,1);
 }
 .rationale.show{
   opacity:1;
-  transform:translateY(0) scale(1);
-  animation:floatRationale 6s ease-in-out infinite;
-}
-.rationale img{
-  width:100%;
-  height:auto;
-  object-fit:contain;
-}
-@keyframes floatRationale{
-  0%,100%{transform:translateY(0) scale(1)}
-  50%{transform:translateY(-6px) scale(1)}
-}
-
-/* ===== CASCADE ===== */
-.cascade-container{
-  position:absolute;
-  top:180px;
-  width:100%;
-  height:240px;
-  pointer-events:none;
-  z-index:20;
-}
-.cascade-container img{
-  position:absolute;
-  width:80%;
-  left:10%;
-  opacity:0;
-  transform:translateY(40px) scale(.94);
-  transition:all .7s cubic-bezier(.22,.9,.22,1);
+  transform:none;
 }
 
 /* ===== QUIZ ===== */
-.quiz-text{
+.quiz{
   position:absolute;
   bottom:14px;
   width:90%;
   left:5%;
-  color:#fff;
-  font-weight:700;
   text-align:center;
-  opacity:0;
-  transition:opacity .6s ease;
-  z-index:40;
-}
-.quiz-text.show{opacity:1}
-
-/* ===== WORD FLY ===== */
-.word-fly-container{
-  position:absolute;
-  inset:0;
-  pointer-events:none;
-  z-index:60;
-}
-.word-fly{
-  position:absolute;
   font-weight:700;
-  color:#fff;
-  transition:
-    transform 1.2s cubic-bezier(.22,.9,.22,1),
-    opacity 1s ease;
+  opacity:0;
+  transition:.4s ease;
 }
-.word-fly.out{opacity:0}
+.quiz.show{opacity:1}
 </style>
 </head>
 
 <body>
-<div class="phone">
-  <div class="body"></div>
-  <div class="screen">
 
-    <div class="branding">ETK Yogya</div>
+<!-- PRE HOOK -->
+<div class="prehook">
+  <h1>KESALAHAN KECIL<br>YANG BIKIN SKOR CBT JATUH</h1>
+</div>
 
-    <!-- Curved Hook -->
-    <svg class="hook-svg" viewBox="0 0 230 50">
-      <defs>
-        <path id="arc" d="M12,40 A110,32 0 0,1 218,40"/>
-      </defs>
-      <text class="hook-text">
-        <textPath href="#arc" startOffset="50%" text-anchor="middle">
-          ...CBTLearning|Paham|SNBT'26...
-        </textPath>
-      </text>
-    </svg>
+<!-- MAIN -->
+<div class="main">
+  <div class="phone">
+    <div class="body"></div>
+    <div class="screen">
 
-    <div class="hook-subtitle">•Rationale Generator•</div>
+      <div class="branding">ETK Yogya</div>
 
-    <div class="rationale" id="rationale">
-      <img id="image">
+      <div class="hook">CBT LEARNING • SNBT • ASN</div>
+
+      <div class="rationale" id="rat">
+        <img src="https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg" style="width:100%">
+      </div>
+
+      <div class="quiz" id="quiz">
+        Jika 3x + 5 = 20, maka nilai x adalah
+      </div>
+
     </div>
-
-    <div class="cascade-container" id="cascade"></div>
-
-    <div class="quiz-text" id="quizText"
-      data-text="•SNBT•BAHAS|TUNTAS| Jika 3x + 5 = 20, maka nilai x adalah">
-    </div>
-
-    <div class="word-fly-container" id="fly"></div>
   </div>
 </div>
 
 <script>
-const images=[
- "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg",
- "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz2.jpg",
- "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz3.jpg",
- "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz5.jpg",
- "https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz6.jpg"
-];
+const rat=document.getElementById("rat");
+const quiz=document.getElementById("quiz");
 
-const rationale=document.getElementById("rationale");
-const image=document.getElementById("image");
-const quiz=document.getElementById("quizText");
-const cascade=document.getElementById("cascade");
-const fly=document.getElementById("fly");
-
-let idx=0;
-const DURATION=5200;
-
-/* preload */
-images.forEach(s=>{const i=new Image();i.src=s});
-
-/* split words */
-function split(){
-  quiz.innerHTML=quiz.dataset.text.split(" ")
-    .map(w=>`<span>${w}</span>`).join(" ");
-}
-
-/* fly words */
-function flyWords(){
-  fly.innerHTML="";
-  const p=fly.getBoundingClientRect();
-  quiz.querySelectorAll("span").forEach((s,i)=>{
-    const r=s.getBoundingClientRect();
-    const c=s.cloneNode(true);
-    c.className="word-fly";
-    c.style.left=r.left-p.left+"px";
-    c.style.top=r.top-p.top+"px";
-    fly.appendChild(c);
-    setTimeout(()=>{
-      const a=Math.random()*Math.PI*2;
-      c.style.transform=`translate(${Math.cos(a)*80}px,${Math.sin(a)*80}px) scale(1.8)`;
-      c.classList.add("out");
-    },i*120);
-    setTimeout(()=>c.remove(),1600);
-  });
-}
-
-/* cascade */
-function showCascade(){
-  cascade.innerHTML="";
-  images.forEach((src,i)=>{
-    const img=document.createElement("img");
-    img.src=src;
-    img.style.zIndex=10+i;
-    cascade.appendChild(img);
-    setTimeout(()=>{
-      img.style.opacity=1;
-      img.style.transform=`translateY(${i*14}px) scale(1)`;
-    },i*260);
-    setTimeout(()=>img.remove(),DURATION);
-  });
-}
-
-/* main loop */
-function show(){
-  image.src=images[idx%images.length];
-  idx++;
-  rationale.classList.remove("show");
-  quiz.classList.remove("show");
-  quiz.innerHTML=quiz.dataset.text;
-
-  image.onload=()=>{
-    setTimeout(()=>rationale.classList.add("show"),200);
-    setTimeout(()=>{
-      quiz.classList.add("show");
-      split();
-      flyWords();
-    },900);
-    setTimeout(()=>{
-      rationale.classList.remove("show");
-      quiz.classList.remove("show");
-      showCascade();
-    },DURATION-1000);
-  };
-
-  setTimeout(show,DURATION+1400);
-}
-show();
+setTimeout(()=>rat.classList.add("show"),1300);
+setTimeout(()=>quiz.classList.add("show"),1900);
 </script>
+
 </body>
 </html>
