--- a/index.html
+++ b/index.html
@@ -3,67 +3,59 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>CBTLearning – Algorithm Ready</title>
+<title>CBT Learning – Cognitive Hook</title>
 
 <style>
-/* ===== RESET ===== */
 body{
   margin:0;
   background:#020617;
+  color:white;
   font-family:system-ui,-apple-system,Segoe UI;
   overflow:hidden;
-  color:white;
 }
 
-/* ===== PRE-HOOK ===== */
-.prehook{
+/* ===== HOOK (TENANG, CEPAT) ===== */
+.hook{
   position:fixed;
   inset:0;
   display:flex;
   align-items:center;
   justify-content:center;
-  z-index:999;
-  background:#020617;
-  animation:prehookZoom 1.1s ease forwards;
-}
-.prehook h1{
   text-align:center;
-  font-size:2.2rem;
-  line-height:1.2;
-  letter-spacing:.6px;
+  padding:0 12%;
+  font-size:1.4rem;
+  line-height:1.35;
+  font-weight:600;
+  animation:hookOut .9s ease forwards;
 }
-@keyframes prehookZoom{
-  from{transform:scale(1);opacity:1}
-  to{transform:scale(1.08);opacity:0}
+@keyframes hookOut{
+  0%{opacity:1}
+  70%{opacity:1}
+  100%{opacity:0}
 }
 
 /* ===== MAIN ===== */
 .main{
   opacity:0;
-  animation:showMain .1s linear forwards;
-  animation-delay:1.1s;
+  animation:mainIn .1s linear forwards;
+  animation-delay:.9s;
 }
-@keyframes showMain{to{opacity:1}}
+@keyframes mainIn{to{opacity:1}}
 
 /* ===== PHONE ===== */
 .phone{
   width:230px;
   height:460px;
-  position:relative;
   margin:auto;
   margin-top:6vh;
-  animation:float 6s ease-in-out infinite;
-}
-@keyframes float{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-6px)}
+  position:relative;
 }
 .body{
   position:absolute;
   inset:0;
   border-radius:34px;
   background:#020617;
-  box-shadow:0 50px 120px rgba(0,0,0,.8),
+  box-shadow:0 40px 100px rgba(0,0,0,.8),
              inset 0 0 0 1.5px #334155;
 }
 .screen{
@@ -73,102 +65,69 @@ body{
   overflow:hidden;
 }
 
-/* ===== BRANDING (DITUNDA) ===== */
-.branding{
+/* ===== CONTENT ===== */
+.question{
   position:absolute;
-  top:6px;
-  right:6px;
-  font-size:10px;
-  font-weight:700;
-  opacity:0;
-  animation:showBrand .3s ease forwards;
-  animation-delay:2.2s;
-}
-@keyframes showBrand{to{opacity:.85}}
-
-/* ===== HOOK ===== */
-.hook{
-  position:absolute;
-  top:24px;
-  width:100%;
-  text-align:center;
-  font-size:14px;
-  font-weight:800;
-  letter-spacing:1px;
-  opacity:0;
-  animation:hookIn .3s ease forwards;
-  animation-delay:1.2s;
-}
-@keyframes hookIn{
-  from{transform:scale(.96);opacity:0}
-  to{transform:scale(1);opacity:1}
-}
-
-/* ===== RATIONALE ===== */
-.rationale{
-  position:absolute;
-  top:80px;
+  top:90px;
   width:90%;
   left:5%;
-  opacity:0;
-  transform:translateY(14px) scale(.92);
-  transition:.7s cubic-bezier(.22,.9,.22,1);
-}
-.rationale.show{
-  opacity:1;
-  transform:none;
-}
-
-/* ===== QUIZ ===== */
-.quiz{
-  position:absolute;
-  bottom:14px;
-  width:90%;
-  left:5%;
-  text-align:center;
   font-weight:700;
+  font-size:.95rem;
   opacity:0;
+  transform:translateY(10px);
   transition:.4s ease;
 }
-.quiz.show{opacity:1}
+.question.show{opacity:1;transform:none}
+
+.rationale{
+  position:absolute;
+  top:140px;
+  width:90%;
+  left:5%;
+  opacity:0;
+  transform:translateY(12px) scale(.96);
+  transition:.5s cubic-bezier(.22,.9,.22,1);
+}
+.rationale.show{opacity:1;transform:none}
+
+.brand{
+  position:absolute;
+  bottom:8px;
+  right:10px;
+  font-size:10px;
+  opacity:.7;
+}
 </style>
 </head>
 
 <body>
 
-<!-- PRE HOOK -->
-<div class="prehook">
-  <h1>KESALAHAN KECIL<br>YANG BIKIN SKOR CBT JATUH</h1>
+<div class="hook">
+  Di CBT, jawaban benar<br>bisa tetap salah.
 </div>
 
-<!-- MAIN -->
 <div class="main">
   <div class="phone">
     <div class="body"></div>
     <div class="screen">
 
-      <div class="branding">ETK Yogya</div>
-
-      <div class="hook">CBT LEARNING • SNBT • ASN</div>
-
-      <div class="rationale" id="rat">
-        <img src="https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg" style="width:100%">
-      </div>
-
-      <div class="quiz" id="quiz">
+      <div class="question" id="q">
         Jika 3x + 5 = 20, maka nilai x adalah
       </div>
 
+      <div class="rationale" id="r">
+        <img src="https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg"
+             style="width:100%">
+      </div>
+
+      <div class="brand">CBTLearning</div>
     </div>
   </div>
 </div>
 
 <script>
-const rat=document.getElementById("rat");
-const quiz=document.getElementById("quiz");
-
-setTimeout(()=>rat.classList.add("show"),1300);
-setTimeout(()=>quiz.classList.add("show"),1900);
+setTimeout(()=>q.classList.add("show"),900);
+setTimeout(()=>r.classList.add("show"),1300);
 </script>
 
 </body>
