--- a/index.html
+++ b/index.html
@@ -3,51 +3,24 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>CBT Learning – Cognitive Hook</title>
+<title>CBT Learning – Real Screen</title>
 
 <style>
 body{
   margin:0;
+  height:100vh;
   background:#020617;
-  color:white;
+  display:flex;
+  justify-content:center;
+  align-items:center;
   font-family:system-ui,-apple-system,Segoe UI;
   overflow:hidden;
 }
-
-/* ===== HOOK (TENANG, CEPAT) ===== */
-.hook{
-  position:fixed;
-  inset:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  padding:0 12%;
-  font-size:1.4rem;
-  line-height:1.35;
-  font-weight:600;
-  animation:hookOut .9s ease forwards;
-}
-@keyframes hookOut{
-  0%{opacity:1}
-  70%{opacity:1}
-  100%{opacity:0}
-}
-
-/* ===== MAIN ===== */
-.main{
-  opacity:0;
-  animation:mainIn .1s linear forwards;
-  animation-delay:.9s;
-}
-@keyframes mainIn{to{opacity:1}}
 
 /* ===== PHONE ===== */
 .phone{
   width:230px;
   height:460px;
-  margin:auto;
-  margin-top:6vh;
   position:relative;
 }
 .body{
@@ -55,79 +28,136 @@ body{
   inset:0;
   border-radius:34px;
   background:#020617;
-  box-shadow:0 40px 100px rgba(0,0,0,.8),
-             inset 0 0 0 1.5px #334155;
+  box-shadow:
+    0 40px 100px rgba(0,0,0,.8),
+    inset 0 0 0 1.5px #334155;
 }
 .screen{
   position:absolute;
   inset:10px;
   border-radius:26px;
   overflow:hidden;
+  background:#020617;
 }
 
-/* ===== CONTENT ===== */
+/* ===== STATUS BAR (REAL FEEL) ===== */
+.status{
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  height:22px;
+  padding:0 8px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  font-size:9px;
+  color:#e5e7eb;
+  background:rgba(0,0,0,.25);
+  z-index:50;
+}
+
+/* ===== MICRO HOOK (UI TEXT) ===== */
+.micro-hook{
+  position:absolute;
+  top:32px;
+  width:90%;
+  left:5%;
+  font-size:12px;
+  font-weight:600;
+  color:#38bdf8;
+  opacity:0;
+  transform:translateY(6px);
+  transition:.35s ease;
+}
+.micro-hook.show{
+  opacity:1;
+  transform:none;
+}
+
+/* ===== QUESTION ===== */
 .question{
   position:absolute;
-  top:90px;
+  top:70px;
   width:90%;
   left:5%;
+  font-size:13px;
   font-weight:700;
-  font-size:.95rem;
+  color:#fff;
   opacity:0;
-  transform:translateY(10px);
-  transition:.4s ease;
+  transform:translateY(8px);
+  transition:.35s ease;
 }
-.question.show{opacity:1;transform:none}
+.question.show{
+  opacity:1;
+  transform:none;
+}
 
+/* ===== RATIONALE ===== */
 .rationale{
   position:absolute;
-  top:140px;
+  top:115px;
   width:90%;
   left:5%;
   opacity:0;
-  transform:translateY(12px) scale(.96);
-  transition:.5s cubic-bezier(.22,.9,.22,1);
+  transform:translateY(10px) scale(.96);
+  transition:.45s cubic-bezier(.22,.9,.22,1);
 }
-.rationale.show{opacity:1;transform:none}
+.rationale.show{
+  opacity:1;
+  transform:none;
+}
 
+/* ===== BRAND (HALUS, AKHIR) ===== */
 .brand{
   position:absolute;
-  bottom:8px;
-  right:10px;
-  font-size:10px;
-  opacity:.7;
+  bottom:6px;
+  right:8px;
+  font-size:9px;
+  opacity:0;
+  transition:.3s ease;
 }
+.brand.show{opacity:.6}
 </style>
 </head>
 
 <body>
 
-<div class="hook">
-  Di CBT, jawaban benar<br>bisa tetap salah.
-</div>
+<div class="phone">
+  <div class="body"></div>
+  <div class="screen">
 
-<div class="main">
-  <div class="phone">
-    <div class="body"></div>
-    <div class="screen">
-
-      <div class="question" id="q">
-        Jika 3x + 5 = 20, maka nilai x adalah
-      </div>
-
-      <div class="rationale" id="r">
-        <img src="https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg"
-             style="width:100%">
-      </div>
-
-      <div class="brand">CBTLearning</div>
+    <!-- STATUS BAR -->
+    <div class="status">
+      <span>CBT MODE</span>
+      <span>09:41</span>
     </div>
+
+    <!-- MICRO HOOK -->
+    <div class="micro-hook" id="hook">
+      Jawaban benar ≠ nilai benar
+    </div>
+
+    <!-- QUESTION -->
+    <div class="question" id="q">
+      Jika 3x + 5 = 20, maka nilai x adalah
+    </div>
+
+    <!-- RATIONALE -->
+    <div class="rationale" id="r">
+      <img src="https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg"
+           style="width:100%">
+    </div>
+
+    <div class="brand" id="b">CBTLearning</div>
   </div>
 </div>
 
 <script>
-setTimeout(()=>q.classList.add("show"),900);
-setTimeout(()=>r.classList.add("show"),1300);
+setTimeout(()=>hook.classList.add("show"),200);
+setTimeout(()=>q.classList.add("show"),600);
+setTimeout(()=>r.classList.add("show"),1000);
+setTimeout(()=>b.classList.add("show"),1600);
 </script>
 
 </body>
