--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body{
 
     <!-- STATUS BAR -->
     <div class="status">
-      <span>CBT MODE</span>
+      <span>CBTLearning </span>
       <span>09:41</span>
     </div>
 
@@ -137,6 +137,9 @@ body{
     <div class="micro-hook" id="hook">
       Jawaban benar ≠ nilai benar
     </div>
+    <div class="hook">
+  Di CBT, jawaban benar<br>bisa tetap salah.
+</div>
 
     <!-- QUESTION -->
     <div class="question" id="q">
