--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="id">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>CBT Learning – Real Screen</title>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>CBTLearning – Cognitive Trap</title>
 
 <style>
 body{
@@ -17,151 +17,102 @@ body{
   overflow:hidden;
 }
 
-/* ===== PHONE ===== */
+/* PHONE */
 .phone{
-  width:230px;
-  height:460px;
+  width:240px;
+  height:480px;
   position:relative;
 }
 .body{
   position:absolute;
   inset:0;
-  border-radius:34px;
+  border-radius:36px;
   background:#020617;
-  box-shadow:
-    0 40px 100px rgba(0,0,0,.8),
-    inset 0 0 0 1.5px #334155;
+  box-shadow:0 40px 100px rgba(0,0,0,.8),
+             inset 0 0 0 1.5px #334155;
 }
 .screen{
   position:absolute;
   inset:10px;
-  border-radius:26px;
+  border-radius:28px;
   overflow:hidden;
-  background:#020617;
-}
-
-/* ===== STATUS BAR (REAL FEEL) ===== */
-.status{
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  height:22px;
-  padding:0 8px;
   display:flex;
+  justify-content:center;
   align-items:center;
-  justify-content:space-between;
-  font-size:9px;
-  color:#e5e7eb;
-  background:rgba(0,0,0,.25);
-  z-index:50;
 }
 
-/* ===== MICRO HOOK (UI TEXT) ===== */
-.micro-hook{
-  position:absolute;
-  top:32px;
-  width:90%;
-  left:5%;
-  font-size:12px;
-  font-weight:600;
-  color:#38bdf8;
-  opacity:0;
-  transform:translateY(6px);
-  transition:.35s ease;
-}
-.micro-hook.show{
-  opacity:1;
-  transform:none;
-}
-
-/* ===== QUESTION ===== */
-.question{
-  position:absolute;
-  top:70px;
-  width:90%;
-  left:5%;
-  font-size:13px;
-  font-weight:700;
+/* TEXT CORE */
+.core{
+  width:88%;
+  text-align:center;
   color:#fff;
+  font-weight:700;
+  line-height:1.25;
   opacity:0;
-  transform:translateY(8px);
-  transition:.35s ease;
+  transform:scale(.95);
+  transition:all .4s ease;
 }
-.question.show{
+.core.show{
   opacity:1;
-  transform:none;
+  transform:scale(1);
 }
 
-/* ===== RATIONALE ===== */
-.rationale{
-  position:absolute;
-  top:115px;
-  width:90%;
-  left:5%;
-  opacity:0;
-  transform:translateY(10px) scale(.96);
-  transition:.45s cubic-bezier(.22,.9,.22,1);
-}
-.rationale.show{
-  opacity:1;
-  transform:none;
-}
+/* STATES */
+.wrong{color:#fb7185;}
+.rationale{color:#38bdf8;font-weight:600;font-size:.85em;}
+.question{color:#e5e7eb;font-size:.9em;}
+.correct{color:#a7f3d0;}
 
-/* ===== BRAND (HALUS, AKHIR) ===== */
+/* BRANDING (MINIMAL) */
 .brand{
   position:absolute;
   bottom:6px;
   right:8px;
   font-size:9px;
-  opacity:0;
-  transition:.3s ease;
+  color:#fff;
+  opacity:.35;
 }
-.brand.show{opacity:.6}
 </style>
 </head>
 
 <body>
-
 <div class="phone">
   <div class="body"></div>
   <div class="screen">
-
-    <!-- STATUS BAR -->
-    <div class="status">
-      <span>CBTLearning </span>
-      <span>09:41</span>
-    </div>
-
-    <!-- MICRO HOOK -->
-    <div class="micro-hook" id="hook">
-      Jawaban benar ≠ nilai benar
-    </div>
-    <div class="hook">
-  Di CBT, jawaban benar<br>bisa tetap salah.
-</div>
-
-    <!-- QUESTION -->
-    <div class="question" id="q">
-      Jika 3x + 5 = 20, maka nilai x adalah
-    </div>
-
-    <!-- RATIONALE -->
-    <div class="rationale" id="r">
-      <img src="https://raw.githubusercontent.com/etkyogya-hub/cbtlearning-snbt-1/main/videos/assets/Qz1.jpg"
-           style="width:100%">
-    </div>
-
-    <div class="brand" id="b">CBTLearning</div>
+    <div class="core" id="core"></div>
+    <div class="brand">CBTLearning</div>
   </div>
 </div>
 
 <script>
-setTimeout(()=>hook.classList.add("show"),200);
-setTimeout(()=>q.classList.add("show"),600);
-setTimeout(()=>r.classList.add("show"),1000);
-setTimeout(()=>b.classList.add("show"),1600);
-</script>
+const core = document.getElementById("core");
 
+const steps = [
+  {text:"❌ x = 5", cls:"wrong", t:800},
+  {text:"Kesalahan umum: berhenti di angka pertama", cls:"rationale", t:1000},
+  {text:"Jika 3x + 5 = 20, berapa nilai x?", cls:"question", t:1200},
+  {text:"✅ x = 3", cls:"correct", t:1200},
+];
+
+let i = 0;
+
+function play(){
+  core.className = "core show " + steps[i].cls;
+  core.textContent = steps[i].text;
+
+  setTimeout(()=>{
+    core.classList.remove("show");
+    i++;
+    if(i < steps.length){
+      setTimeout(play,200);
+    }else{
+      i = 0;
+      setTimeout(play,600); // freeze → loop
+    }
+  }, steps[i].t);
+}
+
+play();
+</script>
 </body>
 </html>
