--- a/index.html
+++ b/index.html
@@ -2,133 +2,109 @@
 <html lang="id">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>CBTLearning – Cognitive Engine</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>CBT SNBT – Logic Trap</title>
 
 <style>
 body{
-  margin:0;height:100vh;background:#020617;
-  display:flex;justify-content:center;align-items:center;
+  margin:0;
+  background:#020617;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
   font-family:system-ui;
 }
-.phone{width:240px;height:480px;position:relative;}
-.body{
-  position:absolute;inset:0;border-radius:36px;
+
+/* PHONE */
+.phone{
+  width:240px;
+  height:480px;
   background:#020617;
-  box-shadow:0 40px 100px rgba(0,0,0,.8),
-             inset 0 0 0 1.5px #334155;
+  border-radius:30px;
+  box-shadow:0 40px 80px rgba(0,0,0,.7);
+  padding:14px;
+  box-sizing:border-box;
+  color:#fff;
+  position:relative;
 }
-.screen{
-  position:absolute;inset:10px;border-radius:28px;
-  display:flex;justify-content:center;align-items:center;
-  overflow:hidden;
-}
-.core{
-  width:90%;text-align:center;
-  font-weight:700;line-height:1.25;
-  opacity:0;transform:scale(.95);
-  transition:.35s ease;
-}
-.core.show{opacity:1;transform:scale(1)}
 
-.wrong{color:#fb7185}
-.rationale{color:#38bdf8;font-size:.85em}
-.question{color:#e5e7eb;font-size:.85em}
-.option{color:#e5e7eb}
-.correct{color:#a7f3d0}
+/* TEXT BASE */
+.center{
+  position:absolute;
+  inset:0;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
+  font-weight:700;
+}
 
-.brand{
-  position:absolute;bottom:6px;right:8px;
-  font-size:9px;color:#fff;opacity:.35;
+/* STATES */
+.hidden{opacity:0}
+.show{opacity:1}
+.big{font-size:1.15em}
+.small{font-size:.9em}
+
+/* COLORS */
+.hook{color:#38bdf8}
+.trap{color:#facc15}
+.rationale{color:#4ade80}
+
+/* TRANSITION */
+.fade{
+  transition:opacity .4s ease;
 }
 </style>
 </head>
 
 <body>
 <div class="phone">
-  <div class="body"></div>
-  <div class="screen">
-    <div class="core" id="core"></div>
-    <div class="brand">CBTLearning</div>
+
+  <!-- HOOK -->
+  <div id="hook" class="center big hook fade">
+    90% orang SALAH di soal ini
   </div>
+
+  <!-- TRAP -->
+  <div id="trap" class="center big trap fade hidden">
+    Jika 3x + 5 = 20<br>nilai x?
+  </div>
+
+  <!-- RATIONALE -->
+  <div id="why" class="center small rationale fade hidden">
+    Bukan hitungannya yang salah,<br>
+    tapi cara bacanya.
+  </div>
+
+  <!-- CTA -->
+  <div id="cta" class="center small fade hidden">
+    Ulangi sebelum jawab.
+  </div>
+
 </div>
 
 <script>
-/* ================================
-   MODE: pilih salah satu
-   "WRONG_FIRST"
-   "DECISION_FIRST"
-   "INTERRUPTED_RATIONALE"
-================================ */
-const MODE = "WRONG_FIRST";
+const hook = document.getElementById("hook");
+const trap = document.getElementById("trap");
+const why  = document.getElementById("why");
+const cta  = document.getElementById("cta");
 
-/* ===== DATA (GANTI INI SAJA) ===== */
-const DATA = {
-  wrong: "❌ x = 5",
-  rationale: "Kesalahan umum: berhenti di angka pertama",
-  question: "Jika 3x + 5 = 20, berapa nilai x?",
-  correct: "✅ x = 3",
+setTimeout(()=>{
+  hook.classList.add("hidden");
+  trap.classList.remove("hidden");
+},1500);
 
-  options: "A. Efisiensi<br>B. Efektivitas",
-  decisionHint: "Mana yang paling masuk akal?",
+setTimeout(()=>{
+  trap.classList.add("hidden");
+  why.classList.remove("hidden");
+},4000);
 
-  wrongRationale: "Karena angkanya besar, pilih C",
-  fixRationale: "Yang diuji adalah hubungan antar nilai"
-};
-
-const core = document.getElementById("core");
-
-/* ===== STEP GENERATOR ===== */
-function getSteps(){
-  if(MODE==="WRONG_FIRST"){
-    return [
-      {t:800, cls:"wrong", text:DATA.wrong},
-      {t:1000, cls:"rationale", text:DATA.rationale},
-      {t:1200, cls:"question", text:DATA.question},
-      {t:1200, cls:"correct", text:DATA.correct}
-    ];
-  }
-
-  if(MODE==="DECISION_FIRST"){
-    return [
-      {t:900, cls:"option", text:DATA.options},
-      {t:900, cls:"rationale", text:DATA.decisionHint},
-      {t:1100, cls:"question", text:DATA.question},
-      {t:1200, cls:"correct", text:DATA.correct}
-    ];
-  }
-
-  if(MODE==="INTERRUPTED_RATIONALE"){
-    return [
-      {t:900, cls:"wrong", text:DATA.wrongRationale},
-      {t:600, cls:"wrong", text:"❌ Bukan itu yang diuji"},
-      {t:1100, cls:"rationale", text:DATA.fixRationale},
-      {t:1200, cls:"correct", text:DATA.correct}
-    ];
-  }
-}
-
-/* ===== PLAYER ===== */
-const steps = getSteps();
-let i=0;
-
-function play(){
-  core.className="core show "+steps[i].cls;
-  core.innerHTML=steps[i].text;
-
-  setTimeout(()=>{
-    core.classList.remove("show");
-    i++;
-    if(i>=steps.length){
-      i=0;
-      setTimeout(play,600); // freeze → loop
-    }else{
-      setTimeout(play,200);
-    }
-  },steps[i].t);
-}
-
-play();
+setTimeout(()=>{
+  why.classList.add("hidden");
+  cta.classList.remove("hidden");
+},7500);
 </script>
 </body>
 </html>
